<resources>

    <string name="app_name">CardapioGarcom</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="numero_mesa">Mesa</string>
    <string name="pedido">Pedido</string>
    <string name="mesa">Mesa</string>
    <string name="obs">Observação</string>
    <string name="cod_produto">Cod. Produto</string>
    <string name="itens">Itens</string>
    <string name="item">Item</string>
    <string name="adicionarItem"> + Adicionar Itens</string>
    <string name="efetuarPedido">Efetuar Pedido</string>
    <string name="cancelarPedido">Cancelar</string>
    <string name="mais">></string>
    <string name="excluir">-</string>
    <string name="menos">&#60;</string>
    <string name="enviar_pedido">Enviar</string>
    <string name="observacoes">Observações:</string>
    <string name="aprovar">Aprovar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="mesas">Mesas</string>
    <string name="setor">Setor</string>
    <string name="historico_conta">Histórico da Conta</string>
    <string name="pausa">Pausa</string>
    <string name="pausa_off">Retirar Pausa</string>
    <string name="enviar">Enviar</string>
    <string name="email">E-mail:</string>

    <string name="sair">Sair</string>
    <string name="mensagemEsqueceuSenha">Esqueci a senha"</string>
    <string name="lembraSenha">Lembrar senha</string>
    <string name="text_view_login">Login:</string>
    <string name="text_view_password">Senha:</string>
    <string name="button_entrar">Entrar</string>


</resources>