<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cardapio_beach_stop"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barra_topo"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_login_image_view_topo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_login_text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/text_view_login"
            android:textColor="@color/textview_marrom"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activity_login_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.01"
            android:background="#7AACD0"
            android:ems="10"
            android:paddingLeft="10dp"
            android:text="argus"
            android:textSize="18sp">

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:textSize="18sp">

            <TextView
                android:id="@+id/activity_login_text_view_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/text_view_password"
                android:textColor="@color/textview_marrom"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/activity_login_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#7AACD0"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:text="1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/activity_login_button_entrar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="#2175B1"
                android:onClick="autenticar"
                android:text="@string/button_entrar"
                android:textColor="#0B405F"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_login_lembrar_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:onClick="lembrarSenha"
                android:background="@android:color/transparent"
                android:text="@string/mensagemEsqueceuSenha"
                android:textColor="#0B405F" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>