<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_system"
    android:orientation="vertical"
    tools:context=".HistoricoContaActivity" >

    <com.login.beachstop.garcom.android.views.actionbar.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <ImageView
            android:id="@+id/imagem_action_bar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="35dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/icone_historico" />

        <TextView
            android:id="@+id/text_view_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/imagem_action_bar"
            android:text="@string/historico_conta"
            android:textColor="@color/branco"
            android:textSize="20sp" />
    </com.login.beachstop.garcom.android.views.actionbar.ActionBar>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/activity_conta_linearlayout_busca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/activity_conta_button_pesquisa_mesa"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="2dp"
                android:background="#2175B1"
                android:drawableLeft="@drawable/ic_pesquisar"
                android:gravity="center"
                android:padding="2dp" />

            <EditText
                android:id="@+id/activity_conta_edittext_pesquisa_mesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/activity_conta_button_pesquisa_mesa"
                android:ems="10"
                android:hint="@string/mesa"
                android:inputType="number" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <TableLayout
            android:id="@+id/activity_conta_list_view_item_conta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/activity_conta_linear_layout_valor"
            android:layout_below="@+id/activity_conta_linearlayout_busca"
            android:shrinkColumns="0"
            android:stretchColumns="0"
            android:visibility="gone" >
        </TableLayout>

        <TextView
            android:id="@+id/activity_conta_text_view_sem_conta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/activity_conta_linear_layout_valor"
            android:layout_below="@+id/activity_conta_linearlayout_busca"
            android:layout_margin="5dp"
            android:choiceMode="none"
            android:gravity="center"
            android:text="Nada consta!"
            android:textAlignment="center"
            android:textColor="#654F3832"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/activity_conta_linear_layout_valor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="#C19E97"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/activity_conta_text_view_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_fragment_conta_valor_total"
                android:paddingBottom="3dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="3dp"
                android:text="R$0,00"
                android:textColor="@color/branco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_conta_text_view_lbl_parcial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/activity_conta_text_view_valor"
                android:gravity="center_vertical"
                android:text="Total:"
                android:textColor="#4F3832"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>